Added basic HTML structure to index.html
Created a basic webpage structure with a title, heading, and welcome message. This serves as the foundation for the portfolio website.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Sam's Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>Hi, I'm Sam! This is my personal website.</p>
+    <h1>Hello, I'm Sam! 👋</h1>
+    <p>Welcome to my GitHub Portfolio Page.</p>
 </body>
 </html>
