Added "My Projects" section with beginner-friendly projects
Included a new "My Projects" section in index.html to showcase beginner-friendly projects. The section highlights a To-Do List App, Student Grade Calculator, and Study Planner. Added CSS styling to improve visual appearance and readability.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             margin: 0 15px;
             font-size: 18px;
         }
+        .container {
+            padding: 20px;
+        }
+        .projects {
+            background: white;
+            padding: 20px;
+            margin: 20px auto;
+            width: 80%;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -40,7 +51,18 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
     </nav>
+    
     <h1>Hello, I'm Sam! 👋</h1>
     <p>Welcome to my GitHub Portfolio Page.</p>
+
+    <!-- My Projects Section -->
+    <div class="container">
+        <h2>My Projects</h2>
+        <div class="projects">
+            <p>📝 <strong>To-Do List App</strong> - A simple task manager to keep track of daily activities.</p>
+            <p>📊 <strong>Student Grade Calculator</strong> - Calculates GPA & percentage from subject scores.</p>
+            <p>📅 <strong>Study Planner</strong> - A basic app to schedule study sessions & reminders.</p>
+        </div>
+    </div>
 </body>
 </html>
