Added Contact Section to index.html
Added a Contact Section at the bottom of the portfolio. Includes email, GitHub link, and a placeholder for LinkedIn. Allows visitors to easily reach out.

--- a/index.html
+++ b/index.html
@@ -4,42 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sam's Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            font-size: 24px;
-        }
-        nav {
-            background: #444;
-            padding: 10px;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-        .container {
-            padding: 20px;
-        }
-        .projects {
-            background: white;
-            padding: 20px;
-            margin: 20px auto;
-            width: 80%;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -63,6 +28,14 @@
             <p>📊 <strong>Student Grade Calculator</strong> - Calculates GPA & percentage from subject scores.</p>
             <p>📅 <strong>Study Planner</strong> - A basic app to schedule study sessions & reminders.</p>
         </div>
+    </div>
+
+    <!-- Contact Section -->
+    <div class="contact">
+        <h2>Contact Me</h2>
+        <p>📧 Email: <a href="mailto:coolbairagisoumyajit@gmail.com">coolbairagisoumyajit@gmail.com</a></p>
+        <p>🔗 GitHub: <a href="https://github.com/its-sam-315" target="_blank">its-sam-315</a></p>
+        <p>💼 LinkedIn: <a href="https://www.linkedin.com/in/soumyajit-bairagi-67181329a/" target="_blank">Soumyajit Bairagi</a></p>
     </div>
 </body>
 </html>
