Added To-Do List App link to portfolio website
Updated the "My Projects" section in index.html to include a live link to the To-Do List App hosted on GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <h1>Hello, I'm Sam! 👋</h1>
     <p>Welcome to my GitHub Portfolio Page.</p>
 
-    <!-- My Projects Section -->
-    <div class="container">
-        <h2>My Projects</h2>
-        <div class="projects">
-            <p>📝 <strong>To-Do List App</strong> - A simple task manager to keep track of daily activities.</p>
-            <p>📊 <strong>Student Grade Calculator</strong> - Calculates GPA & percentage from subject scores.</p>
-            <p>📅 <strong>Study Planner</strong> - A basic app to schedule study sessions & reminders.</p>
-        </div>
+   <!-- My Projects Section -->
+<div class="container">
+    <h2>My Projects</h2>
+    <div class="projects">
+        <p>📝 <strong><a href="https://its-sam-315.github.io/todo-list-app/" target="_blank">To-Do List App</a></strong> - A simple task manager to keep track of daily activities.</p>
+        <p>📊 <strong>Student Grade Calculator</strong> - Calculates GPA & percentage from subject scores. (Coming Soon)</p>
+        <p>📅 <strong>Study Planner</strong> - A basic app to schedule study sessions & reminders. (Coming Soon)</p>
     </div>
+</div>
 
     <!-- Contact Section -->
     <div class="contact">
