Added Student Grade Calculator link to portfolio website
Updated the "My Projects" section in index.html to include a live link to the Student Grade Calculator hosted on GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>My Projects</h2>
     <div class="projects">
         <p>📝 <strong><a href="https://its-sam-315.github.io/todo-list-app/" target="_blank">To-Do List App</a></strong> - A simple task manager to keep track of daily activities.</p>
-        <p>📊 <strong>Student Grade Calculator</strong> - Calculates GPA & percentage from subject scores. (Coming Soon)</p>
+        <p>📊 <strong><a href="https://its-sam-315.github.io/student-grade-calculator/" target="_blank">Student Grade Calculator</a></strong> - Calculates GPA & percentage from subject scores.</p>
         <p>📅 <strong>Study Planner</strong> - A basic app to schedule study sessions & reminders. (Coming Soon)</p>
     </div>
 </div>
