Added Certifications section linking to GitHub repository
- Updated the portfolio website to include a dedicated "Certifications" section.  
- Added a direct link to the new GitHub repository containing all certifications.  
- Ensured the portfolio remains clean and easy to navigate.  
- Maintained all previous sections, including Projects and Contact.  
- This update allows visitors to access and verify certifications easily.

--- a/index.html
+++ b/index.html
@@ -12,26 +12,33 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Projects</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#projects">Projects</a>
+        <a href="#certifications">Certifications</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
     </nav>
     
     <h1>Hello, I'm Sam! 👋</h1>
     <p>Welcome to my GitHub Portfolio Page.</p>
 
-  <!-- My Projects Section -->
-<div class="container">
-    <h2>My Projects</h2>
-    <div class="projects">
-        <p>📝 <strong><a href="https://its-sam-315.github.io/todo-list-app/" target="_blank">To-Do List App</a></strong> - A simple task manager to keep track of daily activities.</p>
-        <p>📊 <strong><a href="https://its-sam-315.github.io/student-grade-calculator/" target="_blank">Student Grade Calculator</a></strong> - Calculates GPA & percentage from subject scores.</p>
-        <p>📅 <strong><a href="https://its-sam-315.github.io/study-planner/" target="_blank">Study Planner</a></strong> - A basic app to schedule study sessions & reminders.</p>
+    <!-- My Projects Section -->
+    <div class="container" id="projects">
+        <h2>My Projects</h2>
+        <div class="projects">
+            <p>📝 <strong><a href="https://its-sam-315.github.io/todo-list-app/" target="_blank">To-Do List App</a></strong> - A simple task manager to keep track of daily activities.</p>
+            <p>📊 <strong><a href="https://its-sam-315.github.io/student-grade-calculator/" target="_blank">Student Grade Calculator</a></strong> - Calculates GPA & percentage from subject scores.</p>
+            <p>📅 <strong><a href="https://its-sam-315.github.io/study-planner/" target="_blank">Study Planner</a></strong> - A basic app to schedule study sessions & reminders.</p>
+        </div>
     </div>
-</div>
+
+    <!-- Certifications Section -->
+    <div class="container" id="certifications">
+        <h2>Certifications</h2>
+        <p>📜 <strong><a href="https://github.com/its-sam-315/certifications" target="_blank">View All Certifications</a></strong></p>
+    </div>
 
     <!-- Contact Section -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <h2>Contact Me</h2>
         <p>📧 Email: <a href="mailto:coolbairagisoumyajit@gmail.com">coolbairagisoumyajit@gmail.com</a></p>
         <p>🔗 GitHub: <a href="https://github.com/its-sam-315" target="_blank">its-sam-315</a></p>
