--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <p>📝 <strong><a href="https://its-sam-315.github.io/todo-list-app/" target="_blank">To-Do List App</a></strong> - A simple task manager to keep track of daily activities.</p>
             <p>📊 <strong><a href="https://its-sam-315.github.io/student-grade-calculator/" target="_blank">Student Grade Calculator</a></strong> - Calculates GPA & percentage from subject scores.</p>
             <p>📅 <strong><a href="https://its-sam-315.github.io/study-planner/" target="_blank">Study Planner</a></strong> - A basic app to schedule study sessions & reminders.</p>
+            
+            <!-- New AI Finance Manager Project -->
+            <p>💰 <strong><a href="https://its-sam-315.github.io/AI-Finance-Manager/" target="_blank">AI Finance Manager</a></strong> - A smart finance tracking app with AI-powered insights.</p>
         </div>
     </div>
 
