Added Auto File Organizer Project
Integrated Auto File Organizer project into the My Projects section.
Added project description & GitHub Pages link.
Maintained consistency with existing project listings.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             
             <!-- New AI Finance Manager Project -->
             <p>💰 <strong><a href="https://its-sam-315.github.io/AI-Finance-Manager/" target="_blank">AI Finance Manager</a></strong> - A smart finance tracking app with AI-powered insights.</p>
+
+            <!-- Newly Added Auto File Organizer -->
+            <p>📂 <strong><a href="https://its-sam-315.github.io/Python-Automation-Scripts/" target="_blank">Auto File Organizer</a></strong> - A Python script to automatically sort and organize your Downloads folder.</p>
         </div>
     </div>
 
