--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
             <p>📝 <strong><a href="https://its-sam-315.github.io/todo-list-app/" target="_blank">To-Do List App</a></strong> - A simple task manager to keep track of daily activities.</p>
             <p>📊 <strong><a href="https://its-sam-315.github.io/student-grade-calculator/" target="_blank">Student Grade Calculator</a></strong> - Calculates GPA & percentage from subject scores.</p>
             <p>📅 <strong><a href="https://its-sam-315.github.io/study-planner/" target="_blank">Study Planner</a></strong> - A basic app to schedule study sessions & reminders.</p>
-            
-            <!-- New AI Finance Manager Project -->
             <p>💰 <strong><a href="https://its-sam-315.github.io/AI-Finance-Manager/" target="_blank">AI Finance Manager</a></strong> - A smart finance tracking app with AI-powered insights.</p>
-
-            <!-- Newly Added Auto File Organizer -->
             <p>📂 <strong><a href="https://its-sam-315.github.io/Python-Automation-Scripts/" target="_blank">Auto File Organizer</a></strong> - A Python script to automatically sort and organize your Downloads folder.</p>
+            <p>📄 <strong><a href="https://ai-resume-builder-1vhu.onrender.com" target="_blank">AI Resume Builder</a></strong> - Generate professional resumes with AI assistance.</p>
         </div>
     </div>
 
